feat: Implement full feature set including Investment, Experience, and Cart pages

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 
     <!-- JavaScript -->
     <script src="js/jquery.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
     <script src="vendors/bootstrap/js/bootstrap.min.js"></script>
     <script src="vendors/jquery-ui/jquery-ui.min.js"></script>
     <script src="vendors/countdown-date-loop-counter/loopcounter.js"></script>
